add plugin hiera integration, switch to yum repo, add some plugin functions

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,20 @@ Session.vim
 spec/fixtures
 .*.sw[a-z]
 *.un~
+log/
+.project
+.blimpy.d
+.vagrant
+pkg/*
+tmp/*
+README.pdf
+/test_reports
+.rvmrc
+.ruby-*
+*.sw*
+spec/fixtures
+Gemfile.lock
+.vagrant*
+.bundle
+.kateproject*
+
